K8s/Ecommerce Project/deploymeny.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: nodejs-react-app
          image: your-nodejs-react-app-image:latest
          ports:
            - containerPort: 3000
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
